objects/FMV_Rate__c.object
<CustomObject>
    <description>This object houses $/watt rates used for calculating Fair Market Value. Each rate record holds a single rate for a specified set of criteria (Financier, Date, State, Lease Type, System Size).</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This date field indicates the end-date that a rate is valid until.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMV_Rate__c</fullName>
        <description>This is the FMV $ per watt rate that is applicable to the given set of criteria (other fields on the rate object)</description>
        <label>FMV Rate</label>
        <precision>9</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <description>This field indicates whether the FMV rate is for monthly or pre-paid leases</description>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This date indicates the start date of the validity of the FMV rate.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This is the State where the FMV rate applies</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 10KW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 30KW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FMV Rate</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>FMV Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMV Rates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>